tests/algorithms/transpiler/FS/searches/tabu_search.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(74,50): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(74,56): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(96,49): error FS0001: The type 'KeyValuePair<string,int>' does not match the type 'string'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(96,76): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(96,82): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(97,56): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(97,62): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(110,46): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/tabu_search.fs(110,52): error FS0001: This expression was expected to have type
    string    
but here has type
    char    
